--- a/LMDatabinding/build.gradle
+++ b/LMDatabinding/build.gradle
@@ -52,5 +52,6 @@ if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
     compileOnly project(path: ':LMCore')
 }
