--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name='Test'
 //include ':Photo'
 //include ':LinuxPlayer'
 include ':Common'
-include ':FileManager'
+//include ':FileManager'
 //include ':MediaPlayer'
 include ':Task'
 //include ':LMMVVM'
