--- a/LMVVM/build.gradle
+++ b/LMVVM/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-def buildVersion="0.0.16"
+def buildVersion="#0.0.22"
 if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) {
     apply plugin: 'com.novoda.bintray-release'
 }
@@ -50,6 +50,6 @@ if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly project(path: ':LMCore')
-    compileOnly project(path: ':LMDatabinding')
+    compileOnly 'com.luckmerlin.library:core:0.0.4'
+    compileOnly 'com.luckmerlin.library:databinding:0.0.10'
 }
