Add single tag click support

--- a/LMDatabinding/build.gradle
+++ b/LMDatabinding/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-def buildVersion="#0.0.20"
+def buildVersion="0.0.24"
 if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) {
     apply plugin: 'com.novoda.bintray-release'
 }
