--- a/LMDRAdapter/build.gradle
+++ b/LMDRAdapter/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-def buildVersion="0.0.15"
+def buildVersion="#0.0.18"
 if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) {
     apply plugin: 'com.novoda.bintray-release'
 }
@@ -41,6 +41,7 @@ if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) 
         userOrg = 'luckmerlin'
         groupId = 'com.luckmerlin.library'
         artifactId = 'adapter'
+
         publishVersion = buildVersion
         repoName = "luckmerlin"
         desc = 'This is a android(Java) list adapter uitl framework.'
@@ -52,5 +53,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
     compileOnly 'com.luckmerlin.library:core:0.0.6'
-    compileOnly 'com.luckmerlin.library:databinding:0.0.20'
+    compileOnly 'com.luckmerlin.library:databinding:0.0.23'
 }
