--- a/LMSkin/src/main/AndroidManifest.xml
+++ b/LMSkin/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.luckmerlin.view" />
+    package="com.luckmerlin.skin" />
