1.Fix dialog model bugs

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,6 @@ include ':LMDatabinding'
 include ':LMDRAdapter'
 include ':MediaCore'
 include ':FileScanner'
-//include ':Test'
+include ':Test'
 include ':LMUI'
 include ':LMSkin'
