--- a/LMDatabinding/build.gradle
+++ b/LMDatabinding/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-def buildVersion="0.0.26"
+def buildVersion="#0.0.40"
 if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) {
     apply plugin: 'com.novoda.bintray-release'
 }
@@ -18,11 +18,11 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles  'proguard-rules.pro'
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles 'proguard-rules.pro'
         }
     }
@@ -53,5 +53,5 @@ if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
-    compileOnly 'com.luckmerlin.library:core:0.0.6'
+    compileOnly 'com.luckmerlin.library:core:0.0.9'
 }
