--- a/LMVVM/build.gradle
+++ b/LMVVM/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-def buildVersion="0.0.31"
+def buildVersion="#0.0.35"
 if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) {
     apply plugin: 'com.novoda.bintray-release'
 }
@@ -50,7 +50,6 @@ if (null!=buildVersion&&buildVersion.length()>0&&!buildVersion.startsWith("#")) 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly 'com.luckmerlin.library:core:0.0.6'
-//    compileOnly project(path: ':LMDatabinding')
-    compileOnly 'com.luckmerlin.library:databinding:0.0.25'
+    compileOnly 'com.luckmerlin.library:core:0.0.9'
+    compileOnly 'com.luckmerlin.library:databinding:0.0.38'
 }
