--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
         options.addStringOption('Xdoclint:none', '-quiet')
         options.addStringOption('encoding', 'UTF-8')
     }
-//    tasks.getByPath(":LMDatabinding:javadocRelease").enabled = false
+    tasks.getByPath(":LMDatabinding:javadocRelease").enabled = false
 //    tasks.getByPath(":LMDRAdapter:javadocRelease").enabled = false
 }
 
