1.Add file scan

--- a/Test/build.gradle
+++ b/Test/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.luckmerlin.test"
-        minSdkVersion 14
+        minSdkVersion 29
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -35,7 +35,7 @@ dependencies {
 //    implementation project(path: ':LMVVM')
 //    implementation project(path: ':LMDatabinding')
     implementation project(path: ':LMCore')
-//    implementation project(path: ':LMDRAdapter')
+    implementation project(path: ':LMDRAdapter')
     implementation project(path: ':FileScanner')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
