--- a/Test/src/main/AndroidManifest.xml
+++ b/Test/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.luckmerlin.test">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true">
         <activity android:name=".MainActivity">
             <intent-filter>
