--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
         options.addStringOption('encoding', 'UTF-8')
     }
 //    tasks.getByPath(":LMDatabinding:javadocRelease").enabled = false
-//    tasks.getByPath(":LMDRAdapter:javadocRelease").enabled = false
+    tasks.getByPath(":LMDRAdapter:javadocRelease").enabled = false
 }
 
 task clean(type: Delete) {
