--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,9 @@
-//include  ':Decoder'
+include ':testplug'
+include ':Plugin'//include  ':Decoder'
 rootProject.name='Test'
 //include ':Photo'
 //include ':LinuxPlayer'
-include ':Common'
+//include ':Common'
 //include ':FileManager'
 //include ':MediaPlayer'
 include ':Task'
@@ -19,3 +20,4 @@ include ':FileScanner'
 //include ':Test'
 include ':LMUI'
 include ':LMSkin'
+//include ':Plugin'
