--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ include ':LMDatabinding'
 include ':LMDRAdapter'
 include ':MediaCore'
 include ':FileScanner'
-//include ':Test'
+include ':Test'
 include ':LMUI'
 include ':LMSkin'
 //include ':Plugin'
