--- a/Test/src/main/AndroidManifest.xml
+++ b/Test/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".Application"
         android:allowBackup="true"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.luckmerlin.test.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
